--- a/src/app/pages/create-account/create-account.component.html
+++ b/src/app/pages/create-account/create-account.component.html
@@ -7,18 +7,27 @@
       <mat-form-field appearance="outline">
         <mat-label>Enter you email</mat-label>
         <input matInput formControlName="email">
+        <mat-error  *ngIf="createaccount.controls.email.invalid">
+          {{createaccount.controls.email.hasError("required") ? "Email is required": "Please enter a  valid Email"}}
+        </mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Enter you User Name</mat-label>
         <input  matInput formControlName="userName">
+        <mat-error  *ngIf="createaccount.controls.userName">
+          {{createaccount.controls.userName.hasError("required") ? "userName is required": "UserName can't be less than 10 characters"}}
+        </mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline">
           <mat-label>Enter you User Password</mat-label>
           <input type="password" matInput formControlName="password">
+          <mat-error  *ngIf="createaccount.controls.password">
+            {{createaccount.controls.password.hasError("required") ? "password is required": "password can't be less than 6 characters"}}
+          </mat-error>
         </mat-form-field>
     </form>
     <div class="buttons-container">
-      <button mat-raised-button class="login-button " color="primary">
+      <button mat-raised-button [disabled]="createaccount.invalid" (click)="create()" class="login-button " color="primary">
           Create account
       </button>
       <p>OR</p>
