--- a/src/app/components/topbar/topbar.component.css
+++ b/src/app/components/topbar/topbar.component.css
@@ -21,3 +21,11 @@
   padding-left: 20px;
 
 }
+.account{
+  display: flex;
+  flex-direction : row-reverse;
+  width: 50%;
+  height: 100%;
+  align-items: center;
+   padding-right: 20px;
+}
