--- a/src/app/components/topbar/topbar.component.html
+++ b/src/app/components/topbar/topbar.component.html
@@ -2,4 +2,17 @@
 <div class="branding">
   sbook
 </div>
+<div class="account">
+  <button mat-icon-button [matMenuTriggerFor]="menu">
+    <mat-icon><span class="material-symbols-outlined">
+      account_circle
+      </span>
+      </mat-icon>
+      <mat-menu #menu="matMenu">
+        <button (click)="logout()" mat-menu-item> Logout </button>
+      </mat-menu>
+  </button>
 </div>
+</div>
+
+
