--- a/src/app/pages/posts/posts.component.css
+++ b/src/app/pages/posts/posts.component.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    width: 188%;
-    height: 90vh;
+    width: 100%;
+    height:100%;
     overflow-y: scroll;
     background:#fff;
 
